BUG#33296 : Error deleting mutex in locking thread

This patch moves the mutex lock before the inspection of the
variable to prevent the race condition of the destructor
inspecting the state then destroying the mutex before the
locking thread (which is in it's CS) is finished.